--- a/nginx-fluent-bit/config/fluent-bit.conf
+++ b/nginx-fluent-bit/config/fluent-bit.conf
@@ -114,8 +114,8 @@
 [OUTPUT]
     Name s3
     Match  *
-    region ap-southeast-1
-    bucket nginx-fluent-bit-ap-southeast-1
+    region %%AWS_REGION%%
+    bucket %%AWS_S3_BUCKET%%
     total_file_size 50M
     upload_timeout 1m
     store_dir /var/log/fluentbit/
