--- a/nginx-fluent-bit/Dockerfile
+++ b/nginx-fluent-bit/Dockerfile
@@ -1,5 +1,8 @@
 FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
 
+ENV AWS_REGION=us-east-1
+ENV AWS_S3_BUCKET=test-s3-bucket
+
 RUN yum update -y
 RUN yum upgrade -y
 
@@ -16,8 +19,3 @@ COPY ./config/entrypoint.sh /
 RUN chmod +x /entrypoint.sh
 
 EXPOSE 8088
-
-
-
-
-
