--- a/nginx-fluent-bit/config/nginx.conf
+++ b/nginx-fluent-bit/config/nginx.conf
@@ -80,6 +80,7 @@ http {
         
         location /health {
             access_log off;
+            error_log off;
             chunked_transfer_encoding off;
             proxy_buffering off;
             proxy_read_timeout 1s;
