--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -64,18 +64,7 @@ http {
             access_log  /var/log/nginx/postdata.log  postdata;
             proxy_pass http://127.0.0.1:8088/postdata; 
         }
-        # The location block is the ThinkingAnalyticsSDK directive in nginx.
-        location /sync {
-            access_log  /var/log/nginx/postdata.log  postdata;
-            proxy_pass http://127.0.0.1:8088/postdata; 
-        }
-
-        # The location block is the Flume directive in nginx.
-        location /rawdata {
-            access_log  /var/log/nginx/rawdata.log  postdata;
-            proxy_pass http://127.0.0.1:8088/postdata; 
-        }
-
+       
         location /error {
             access_log  /var/log/nginx/errordata.log  postdata;
             proxy_pass http://127.0.0.1:8088/postdata; 
@@ -93,14 +82,15 @@ http {
             return 200 '1';
         }
         
-        location /health {
-            access_log off;
-            chunked_transfer_encoding off;
-            proxy_buffering off;
-            proxy_read_timeout 1s;
-            # Fluent Bit health check result
-            proxy_pass http://fluent-bit-svc:2020/api/v1/health;
-        }
+        # location /health {
+        #     access_log off;
+        #     error_log off;
+        #     chunked_transfer_encoding off;
+        #     proxy_buffering off;
+        #     proxy_read_timeout 1s;
+        #     # Fluent Bit health check result
+        #     proxy_pass http://fluent-bit-svc:2020/api/v1/health;
+        # }
 
         location /health_debug {
             return 200;
