--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -4,7 +4,7 @@
 
 user root;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/error-AWS_INSTANCE_ID.log;
 pid /run/nginx.pid;
 
 # Allow many connections and access to files.
@@ -35,7 +35,7 @@ http {
                                       '"cost":"$request_time"'
                                     '}';
 
-    access_log  /var/log/nginx/access.log  postdata;
+    access_log  /var/log/nginx/access-AWS_INSTANCE_ID.log  postdata;
 
     sendfile            on;
     tcp_nopush          on;
@@ -61,12 +61,12 @@ http {
         include /etc/nginx/default.d/*.conf;
 
         location /log {
-            access_log  /var/log/nginx/postdata.log  postdata;
+            access_log  /var/log/nginx/postdata-AWS_INSTANCE_ID.log  postdata;
             proxy_pass http://127.0.0.1:8088/postdata; 
         }
        
         location /error {
-            access_log  /var/log/nginx/errordata.log  postdata;
+            access_log  /var/log/nginx/errordata-AWS_INSTANCE_ID.log  postdata;
             proxy_pass http://127.0.0.1:8088/postdata; 
         }
 
