--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     image: my-nginx
     build: ./nginx
     restart: always
+    environment:
+       AWS_INSTANCE_ID: testId1
     ports:
       - 8088:8088
     depends_on:
