--- a/fluent-bit/Dockerfile
+++ b/fluent-bit/Dockerfile
@@ -1,5 +1,7 @@
 FROM public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
 
-COPY ./fluent-bit.conf /fluent-bit/etc/
+COPY ./config/fluent-bit.conf /fluent-bit/etc/
 
+COPY ./config/entrypoint.sh /
 
+RUN chmod +x /entrypoint.sh
