--- a/fluent-bit/config/fluent-bit.conf
+++ b/fluent-bit/config/fluent-bit.conf
@@ -90,7 +90,7 @@
 
 [INPUT]
     name             tail
-    path             /var/log/nginx/postdata.log
+    path             /var/log/nginx/postdata-*.log
     db               /var/log/fluentbit/logs.db
     rotate_wait      1
     refresh_interval 1
@@ -121,3 +121,16 @@
 #s3    s3_key_format /fluentbit-s3-data/%Y/month=%m/day=%d/access-%H-%M-%S
 #s3    compression gzip
 #s3    use_put_object On
+
+
+[OUTPUT]
+    Name s3
+    Match  *
+    region %%AWS_REGION%%
+    bucket %%AWS_S3_BUCKET%%
+    total_file_size 50M
+    upload_timeout 1m
+    store_dir /var/log/fluentbit/
+    s3_key_format /fluentbit-s3-data/%Y/month=%m/day=%d/access-%H-%M-%S
+    compression gzip
+    use_put_object On
