--- a/nginx/config/nginx-logrotate.conf
+++ b/nginx/config/nginx-logrotate.conf
@@ -1,4 +1,4 @@
-/var/log/nginx/postdata.log /var/log/nginx/errordata.log /var/log/nginx/error.log {
+/var/log/nginx/postdata-AWS_INSTANCE_ID.log /var/log/nginx/errordata-AWS_INSTANCE_ID.log /var/log/nginx/error-AWS_INSTANCE_ID.log {
     hourly
     size 1M
     maxsize 2M
