--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -12,6 +12,7 @@ COPY ./config/nginx-logrotate.conf  /etc/logrotate.d/nginx
 COPY ./config/nginx-logrotate-crond.conf  /etc/cron.d/
 COPY ./config/docker-entrypoint.sh /
 
-RUN chmod 0644 /etc/cron.d/nginx-logrotate-crond.conf
+RUN chmod 0644 /etc/cron.d/nginx-logrotate-crond.conf /etc/logrotate.d/nginx
+
 RUN crontab /etc/cron.d/nginx-logrotate-crond.conf
 RUN chmod +x ./docker-entrypoint.sh
