--- a/fluent-bit/config/fluent-bit.conf
+++ b/fluent-bit/config/fluent-bit.conf
@@ -90,7 +90,7 @@
 
 [INPUT]
     name             tail
-    path             /var/log/nginx/postdata-*.log
+    path             /var/log/nginx/%%INPUT_FILE%%
     db               /var/log/fluentbit/logs.db
     rotate_wait      1
     refresh_interval 1
