--- a/fluent-bit/config/fluent-bit.conf
+++ b/fluent-bit/config/fluent-bit.conf
@@ -88,6 +88,7 @@
     hc_retry_failure_count 3
     hc_period              10
 
+# https://docs.fluentbit.io/manual/pipeline/inputs/tail
 [INPUT]
     name             tail
     path             /var/log/nginx/%%INPUT_FILE%%
@@ -95,6 +96,8 @@
     rotate_wait      1
     refresh_interval 1
     read_from_head   true
+    Buffer_Max_Size  200k
+    Skip_Long_Lines  on
     mem_buf_limit    3000k
     parser           json
 
@@ -104,12 +107,12 @@
 #kinesis_streams    region MACRO_FLUENTBIT_OUTPUT_AWS_REGION
 #kinesis_streams    stream MACRO_FLUENTBIT_OUTPUT_KINESIS_STREAM
 #kinesis_streams    Retry_Limit False
-#kafka[OUTPUT]
-#kafka    Name        kafka
-#kafka    Match       *
-#kafka    Brokers     MACRO_KAFKA_BROKERS
-#kafka    Topics      MACRO_FLUENTBIT_OUTPUT_KAFKA
-#kafka    Retry_Limit False
+[OUTPUT]
+    Name        kafka
+    Match       *
+    Brokers     MACRO_KAFKA_BROKERS
+    Topics      MACRO_FLUENTBIT_OUTPUT_KAFKA
+    Retry_Limit False
 #s3[OUTPUT]
 #s3    Name s3
 #s3    Match  *
