--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -19,6 +19,12 @@ events {
 
 http {
     # https://nginx.org/en/docs/http/ngx_http_core_module.html
+
+
+    # log_format compression '$remote_addr - $remote_user [$time_local] '
+    #                        '"$request" $status $body_bytes_sent '
+    #                        '"$http_referer" "$http_user_agent" "$gzip_ratio"';
+
     # log_format postdata escape=json '{'
     #                                   '"time_local":"$time_local",'
     #                                   '"remote_addr":"$remote_addr",'
