--- a/vector/config/vector.toml
+++ b/vector/config/vector.toml
@@ -1,23 +1,37 @@
 data_dir = "/var/lib/vector"
 
 [api]
-enabled = false
+enabled = true
 address = "0.0.0.0:8686"
+
+[sources.vector_logs]
+type = "internal_logs"
+
+[sinks.vector_logs_file]
+type         = "file"
+inputs = [ "vector_logs" ]
+compression = "none"
+path = "/var/lib/vector/vector-%Y-%m-%d.log"
+encoding.codec = "text"
 
 [sources.nginx_logs]
 type         = "file"
-include      = ["/var/log/nginx/%%INPUT_FILE%%.log"]
-ignore_older = 86400        
+include      = ["/var/log/nginx/%%INPUT_FILE%%"]
+#ignore_older = 259200 # 3 days        
+read_from = "beginning"
+
 
 [transforms.json_parser]
-inputs = ["apache_logs"]
+inputs = ["nginx_logs"]
 type   = "remap"
 source = '''
-. = parse_json(.message)
+. = parse_json!(.message)
 '''
+
 
 [sinks.s3_archives]
 inputs          = ["json_parser"]    
+#inputs          = ["nginx_logs"] 
 type            = "aws_s3"
 region          = "%%AWS_REGION%%"
 bucket          = "%%AWS_S3_BUCKET%%"
@@ -25,4 +39,4 @@ key_prefix      = "vector-data/%Y-%m-%d"      # daily partitions, hive friendly 
 compression     = "gzip"               # compress final objects
 framing.method  = "newline_delimited"  # new line delimited...
 encoding.codec  = "json"               # ...JSON
-batch.max_bytes = 10000000             # 10mb uncompressed
+batch.max_bytes = 1000000             # 1mb uncompressed
