--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,18 +1,12 @@
-FROM  nginx:latest
+#FROM  nginx:latest
+FROM fabiocicerchia/nginx-lua
 
-ENV AWS_INSTANCE_ID=MyHost
-
-RUN apt-get update -y
-RUN apt-get upgrade -y
-
-RUN apt-get install cron logrotate -y
+# RUN apt-get update -y
+# RUN apt-get upgrade -y
 
 COPY ./config/nginx.conf /etc/nginx/
-COPY ./config/nginx-logrotate.conf  /etc/logrotate.d/nginx
-COPY ./config/nginx-logrotate-crond.conf  /etc/cron.d/
+COPY ./lib/resty/*.lua /etc/nginx/conf.d/lib/resty/
+
 COPY ./config/docker-entrypoint.sh /
 
-RUN chmod 0644 /etc/cron.d/nginx-logrotate-crond.conf /etc/logrotate.d/nginx
-
-RUN crontab /etc/cron.d/nginx-logrotate-crond.conf
 RUN chmod +x ./docker-entrypoint.sh
